--- a/materiales/static/css/style_form.css
+++ b/materiales/static/css/style_form.css
@@ -6,7 +6,7 @@
     margin-bottom: 0.15rem;
 }
 input, textarea, select {
-    background-color: #25B7BB !important; 
+    background-color: #ffffff !important; 
     color: #333;
     border: none;
     border-bottom: 2px solid #8B1D69;
