eliminacion de errores de Berisso y Ensenada en modificacion

--- a/materiales/templates/components/modificacion_materiales/modificacion_editar_material.html
+++ b/materiales/templates/components/modificacion_materiales/modificacion_editar_material.html
@@ -67,8 +67,8 @@
                 <label for="sede" class="col-sm-3 col-form-label required">Sede</label>
                 <div class="col-sm-9">
                     <select class="form-select" id="sede" name="sede" required>
-                        <option value="LA PLATA" selected>LA PLATA</option>
-                        <option value="ABASTO">ABASTO</option>
+                        <option value="La Plata" selected>La Plata</option>
+                        <option value="Abasto">Abasto</option>
                     </select>
                 </div>
             </div>
