--- a/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_mapa.html
@@ -260,8 +260,8 @@
                         <p class="sede-text">Sede</p>
                         <p class="sede-value" id="sede-display">{{ form_data.sede_texto|default:"Sin especificar" }}</p>
                         <select class="form-select form-select-sm" id="sede-select" name="sede" style="display: none;"
-                            <option value="LA PLATA" {% if form_data.sede_texto == "LA PLATA" or not form_data.sede_texto %}selected{% endif %}>LA PLATA</option>
-                            <option value="ABASTO" {% if form_data.sede_texto == "ABASTO" %}selected{% endif %}>ABASTO</option>
+                            <option value="La Plata" {% if form_data.sede_texto == "La Plata" or not form_data.sede_texto %}selected{% endif %}>La Plata</option>
+                            <option value="Abasto" {% if form_data.sede_texto == "Abasto" %}selected{% endif %}>Abasto</option>
                         </select>
                     </div>
 
